--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "prismjs": "^1.24.1",
     "solid-app-router": "0.1.14",
-    "solid-icons": "file:../lib/dist",
+    "solid-icons": "^0.5.0",
     "solid-js": "1.2.6"
   }
 }
