fix: update solid-start deps

--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
   },
   "type": "module",
   "devDependencies": {
+    "@solidjs/meta": "^0.28.0",
+    "@solidjs/router": "^0.4.3",
     "@types/prismjs": "^1.26.0",
     "jsdom": "^20.0.0",
     "lodash-es": "^4.17.21",
     "solid-app-router": "^0.4.1",
-    "solid-js": "^1.4.0",
+    "solid-js": "1.5.4",
     "solid-meta": "^0.27.3",
-    "solid-start": "0.1.0-alpha.89",
-    "solid-start-vercel": "0.1.0-alpha.89",
+    "solid-start": "0.1.0-alpha.102",
     "solid-start-node": "next",
+    "solid-start-vercel": "0.1.0-alpha.102",
     "typescript": "^4.4.3",
-    "undici": "^4.12.2",
-    "vite": "^2.8.6",
+    "undici": "5.10.0",
+    "vite": "3.1.0",
     "vite-plugin-dynamic-import": "0.9.9",
     "vite-plugin-solid": "^2.3.0"
   },
