--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "type": "module",
   "devDependencies": {
     "solid-start-node": "0.1.0-alpha.101",
+    "solid-start-vercel": "^0.1.0-alpha.102",
     "typescript": "^4.8.2",
     "vite": "^3.0.9"
   },
