--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "explorer-start",
+  "name": "solid-icons-web",
   "scripts": {
     "dev": "solid-start dev",
     "build": "solid-start build",
@@ -8,21 +8,22 @@
   },
   "type": "module",
   "devDependencies": {
+    "solid-start": "0.1.0-alpha.101",
     "solid-start-node": "0.1.0-alpha.101",
+    "solid-start-vercel": "^0.1.0-alpha.103",
+    "solid-start-netlify": "0.1.0-alpha.101",
+    "@solidjs/meta": "^0.28.0",
+    "@solidjs/router": "^0.4.3",
+    "undici": "^5.10.0",
     "typescript": "^4.8.2",
     "vite": "^3.0.9"
   },
   "dependencies": {
     "@solid-primitives/intersection-observer": "^2.0.1",
-    "@solidjs/meta": "^0.28.0",
-    "@solidjs/router": "^0.4.3",
     "shiki": "^0.11.1",
     "solid-icons": "^1.0.1",
     "solid-js": "1.5.4",
-    "solid-start": "0.1.0-alpha.101",
-    "solid-start-netlify": "0.1.0-alpha.101",
-    "solid-styled-components": "^0.28.4",
-    "undici": "^5.10.0"
+    "solid-styled-components": "^0.28.4"
   },
   "engines": {
     "node": ">=14"
