--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "baseUrl": "./",
     "paths": {
       "~/*": ["./src/*"],
-      "@public": ["./public/*"]
+      "@public": ["./public/*"],
+      "@assets/": ["./src/assets/*"]
     }
   }
 }
