--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prismjs": "^1.29.0",
     "solid-icons": "^1.0.1",
     "solid-js": "^1.5.1",
-    "solid-styled-components": "^0.28.4"
+    "solid-styled-components": "^0.28.4",
+    "tiny-invariant": "^1.3.1"
   }
 }
