--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.4.3",
     "prismjs": "^1.29.0",
-    "solid-icons": "^1.0.1",
+    "solid-icons": "1.0.4",
     "solid-js": "^1.5.1",
     "solid-styled-components": "^0.28.4",
     "tiny-invariant": "^1.3.1"
